# ccbv

./: .editorconfig  .envrc  .flake8  .gitignore  .gitmodules  .isort.cfg  .pre-commit-config.yaml  .travis.yml  CONTRIBUTING.md  Dockerfile  Makefile  Pipfile  Procfile  README.markdown  README.md  config.json  dev_requirements.txt  env.sh  fig.yml  license.md  manage.py  mypy-ratchet.json  mypy.ini  pyproject.toml  pytest.ini  requirements.dev.in  requirements.dev.txt  requirements.in  requirements.prod.in  requirements.prod.txt  requirements.txt  runtime.txt  setup.py  test.txt  using_docker.markdown
.circleci/: config.yml
.github/workflows/: python-tests.yml
cbv/: admin.py  factories.py  models.py  queries.py  shortcut_urls.py  tests.py  urls.py  views.py
cbv/fixtures/: 1.10.json  1.11.json  1.3.json  1.4.json  1.5.json  1.5b1.json  1.5b2.json  1.5c1.json  1.6.json  1.7.json  1.8.json  1.9.json  2.0.json  2.1.json  2.2.json  3.0.json  3.1.json  3.2.json  4.0.json  4.1.json  4.2.json  5.0.json  5.1.json  5.2.json  6.0.json  project.json
cbv/importer/: dataclasses.py  importers.py  storages.py
cbv/management/commands/: cbv_dumpversion.py  fetch_docs_urls.py  load_all_django_versions.py  populate_cbv.py
cbv/migrations/: 0001_initial.py  0002_auto_20161106_0952.py  0002_auto__add_field_method_kwargs__add_field_klass_docstring.py  0003_remove_function_model.py  0004_auto__add_unique_projectversion_project_version_number__add_unique_mod.py  0004_larger_attribute_values.py  0005_delete_moduleattribute.py  0006_auto__add_field_module_docstring.py  0006_simplify_unique_constraint.py  0007_add_functions_split_attributes.py  0007_remove_project_fk.py  0008_add_filename_and_linenumbers.py  0008_delete_project.py  0009_auto__add_field_klass_import_path.py  0009_move_unique_constraint.py  0010_auto_20230104_0019.py  0010_auto__add_unique_project_name.py  0011_auto__del_field_module_parent.py  0012_add_docs_url_field.py
cbv/static/: bootstrap.css  ccbv.js  manni.css  modernizr-2.5.3.min.js  permalinks.js  style.css
cbv/static/favicon/: manifest.json
cbv/templates/: .travis.yml  404.html  500.html  _analytics.html  base.html  home.html  sitemap.xml
cbv/templates/cbv/: _klass_list.html  klass_detail.html  module_detail.html  module_list.html  version_detail.html
cbv/templatetags/: analytics_tags.py  cbv_tags.py
cbv/tests/: __init__.py  factories.py  test_models.py  test_page_snapshots.py  test_views.py
cbv/tests/_page_snapshots/: fuzzy-klass-detail-old.html  (+8 more)
ccbv/: __main__.py  checkout_release.sh  cli.py  conf.py  django_settings.py  docs.py  itertools.py  library.py  main.py  menu.py  run.py  settings.py  utils.py
ccbv/static/: ccbv.css  ccbv.js
ccbv/templates/: _klass_list.html  base.html  home.html  klass_detail.html  module_detail.html  module_list.html  version_detail.html
core/: settings.py  wsgi.py
docker_scripts/: first_run.sh  normal_run.sh  start.sh
dockers/django/: Dockerfile
inspector/: README.markdown  local_settings.py.example  settings.py  urls.py  wsgi.py
inspector/cbv/: admin.py  models.py  urls.py  views.py
inspector/inspector/: settings.py  staticfiles.py  urls.py  wsgi.py
inspector/settings/: __init__.py  base.py  local.py  production.py
requirements/: base.txt  local.txt  production.txt  test.txt
static/: ccbv.js  style.css
tests/: factories.py  test_models.py  test_page_snapshots.py  test_views.py
tests/_page_snapshots/: fuzzy-klass-detail-old.html  fuzzy-klass-detail.html  fuzzy-module-detail.html  homepage.html  klass-detail-old.html  klass-detail-shortcut.html  klass-detail.html  module-detail.html  updateview.html  version-detail.html
tests/files/: empty-sitemap.xml  populated-sitemap.xml
(+29 files in other folders)
